# cpp_dynamic_calc

./: .gitignore  AXIOM_QA_FINAL_REPORT.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  algebraic_parser.cpp  algebraic_parser.h  ast_drills.cpp  axiom_qa_report.json  axiom_qa_test_suite.py  dynamic_calc.cpp  dynamic_calc.h  dynamic_calc_types.h  fast_build.ps1  iParser.h  linear_system_parser.cpp  linear_system_parser.h  main.cpp  ninja_build.bat  ninja_build.sh  test_calc.cpp  test_phase2.cpp  test_phase3.cpp  test_phase3_corrected.cpp  test_phase3_simple.cpp  version.h.in
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
_codeql_build_dir/: cpp_dynamic_calc  test_calc
core/dispatch/: selective_dispatcher.cpp  selective_dispatcher.h
core/engine/: eigen_engine.cpp  eigen_engine.h
docs/api/: architecture.md
docs/user/: performance.md
documents/: 📜 Ogulator.docx
examples/advanced/: enhanced_architecture_demo.py
gui/python/: axiom_gui.py  matlab_alternative_gui.py  ogulator_gui.py
include/: algebraic_parser.h  arena_allocator.h  cpu_optimization.h  daemon_engine.h  dynamic_calc.h  dynamic_calc_types.h  eigen_engine.h  extended_types.h  iParser.h  linear_system_parser.h  nanobind_interface.h  plot_engine.h  python_engine.h  python_parser.h  python_repl.h  selective_dispatcher.h  statistics_engine.h  string_helpers.h  symbolic_engine.h  symengine_integration.h  unit_manager.h  unit_parser.h
reports/: BUG_FIX_REPORT.md  CALCULUS_SUCCESS_REPORT.md
src/: algebraic_parser.cpp  arena_allocator.cpp  cpu_optimization.cpp  daemon_engine.cpp  dynamic_calc.cpp  eigen_engine.cpp  linear_system_parser.cpp  main.cpp  nanobind_interface.cpp  plot_engine.cpp  python_engine.cpp  python_parser.cpp  python_repl.cpp  selective_dispatcher.cpp  statistics_engine.cpp  string_helpers.cpp  symbolic_engine.cpp  unit_manager.cpp  unit_parser.cpp
tests/: PLOTTING_TEST_CASES.md  debug_detailed.cpp  debug_limit.cpp  test_calculus_final.cpp  test_calculus_simple.cpp  tests.cpp
tests/integration/: core_architecture_test.py  senna_speed_test.py
tests/unit/: test_all_specs.py
tools/analysis/: signal_processing_toolkit.py
tools/visualization/: advanced_3d_visualization.py
